@@ -59,6 +59,7 @@
     <Compile Include="Camellia\CamelliaTransformBE.cs" />
     <Compile Include="Camellia\CamelliaTransformLE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\BlockCipherModeTest.cs" />
     <Compile Include="Tests\CamelliaTest.cs" />
     <Compile Include="Tests\ConfluentWaitHandleTest.cs" />
     <Compile Include="Tests\DummyAlgorithm.cs" />
